--- a/fitness/Html/index.html
+++ b/fitness/Html/index.html
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <div class="bottom">
-                        <span>جميع الحقوق محفوظة لموقع فــتــنــس &copy; 2017 | تصميم : <span>محمد يحيى</span></span>
+                        <span>جميع الحقوق محفوظة لموقع فــتــنــس &copy; 2017 | تصميم : <span><a href="https://goo.gl/B56o1U">محمد يحيى</a></span></span>
                     </div>
                 </div>
             </div>
